# readfish

./: CMakeLists.txt  README.md  TOML.md  readfish.yml  requirements.txt  setup.py
examples/: human_chr_selection.toml
graphalign/: long_align.py
include/: robin_hood.h
ru/: ru_gen.py
ru/graphalign/: __init__.py  bifrost_mapper.py  generate_graph.py  khmer_mapper.py  long_align.py
src/: bifrost.cpp  bifrost.h  bindings.cpp  bindings.h
